--- a/src/lib/searchkit/App.css
+++ b/src/lib/searchkit/App.css
@@ -178,6 +178,10 @@
    width:calc(100% - 305px);
 }
 
+.AppSK.InnerSearchPage .content .main-content {
+  width:100%;
+}
+
 .AppSK .pagination {
    margin-top:20px;
    margin-bottom:20px;
@@ -429,7 +433,7 @@
 
 .AppSK .result .data .names.inRoot a,
 .AppSK .result .data .names.author a {
-  padding:8px 0;
+  padding:2px 0 8px 0;
 }
 
 .AppSK .result .data .names.author .authorship {
