WIP: handle autocompletion in outline search (#897,buda-base/autocomplete-prototype#8)

--- a/src/lib/searchkit/App.css
+++ b/src/lib/searchkit/App.css
@@ -619,3 +619,12 @@
 .AppSK .ais-SearchBox-submit:hover {
   background:#ccc5;
 }
+
+
+.resource [data-prop="tmp:outline"] #outline > h2 {
+  display: none;
+}
+
+.resource [data-prop="tmp:outline"] #outline:not(#a) {
+  padding:0;
+}
