use same searchbox everywhere (WIP: #895) + other fixes

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -862,6 +862,7 @@ body > #pop-login { z-index:1000000 ;}
    max-width:100%;
    overflow: hidden;
    box-sizing: border-box;   
+   text-align: left;
 }
 
 .inner-search-bar .suggestions > li,
