fix user history in etext outline search (#911) + keep history by scope (#915)

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -933,6 +933,7 @@ ul.suggestions li .search-result-item-res {
 ul.suggestions li > span:first-child + * {
    position:absolute;
    right:0;
+   top:-2px;
 }
 
 ul.suggestions li > span > svg:first-child {
