--- a/src/lib/searchkit/App.css
+++ b/src/lib/searchkit/App.css
@@ -822,3 +822,45 @@ header[data-hits="0"] ~ .hits .pagination,
   position: relative;
   z-index:0;
 }
+
+.etext-nav-parent #control {
+  margin-right:35px;
+}
+
+.etext-nav-parent .etext-search {
+  margin-left:60px;
+}
+
+.etext-nav-parent .etext-search > input {
+  line-height:28px;
+  margin-right:10px;
+  padding:0 5px;
+  box-sizing: border-box;
+  outline:none;
+}
+
+.etext-nav-parent .etext-search > button {
+  color:white;
+  align-items: baseline;
+  justify-content: center;  
+  width:42px;
+  height:42px;
+}
+
+
+.etext-nav-parent .etext-search > button > span {
+  font-weight:600;
+  font-size:10px;
+  flex-direction: column;
+  align-items: center;
+}
+
+.etext-nav-parent .etext-search > button[disabled] {
+  opacity:0.5;
+}
+
+.etext-nav-parent .etext-search > button[disabled] > span {
+  font-weight:400;
+}
+
+
