--- a/src/lib/searchkit/App.css
+++ b/src/lib/searchkit/App.css
@@ -864,3 +864,21 @@ header[data-hits="0"] ~ .hits .pagination,
 }
 
 
+.etext-nav-parent .etext-search > span {
+  position: relative;
+  box-sizing: border-box;
+  display: inline-block;
+}
+
+.etext-nav-parent .etext-search > span > span {
+  position: absolute;
+  color:white;
+  font-size:10px;
+  font-weight:600;
+  left:0;
+  top:calc(100% + 2px);
+  display: block;
+}
+
+
+.etext-nav-parent .etext-search .etext-search-loader { transform:scale(0.5); /*transform-origin: 20px 20px;*/ right:25px; left:auto !important;}
