--- a/src/components/App.css
+++ b/src/components/App.css
@@ -5507,8 +5507,8 @@ html[lang="en"] .resource .data > [data-prop="bdo:creator"] h4[data-prop="bdo:ro
 }
 
 
-.resource.etext-view .etextPage [lang=bo] .highlight { margin-top:-12px;padding:12px 5px 0 5px ; line-height:20px; display: inline;}
-
+/* .resource.etext-view .etextPage [lang=bo] .highlight { margin-top:-4px;padding:4px 5px 0 5px ; line-height:20px; display: inline;} */
+.resource.etext-view .etextPage .highlight { font-weight:800; background:none; padding:0;} 
 
 .resource.etext:not(#a) .data.bot-props #etext-scroll { display:none !important; }
 
