--- a/src/lib/searchkit/App.css
+++ b/src/lib/searchkit/App.css
@@ -823,6 +823,10 @@ header[data-hits="0"] ~ .hits .pagination,
   z-index:0;
 }
 
+#root > .inner-search-bar + div.H100vh.OF0 {
+  z-index:1000001
+}
+
 .etext-nav-parent #control {
   margin-right:35px;
 }
