--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1403,11 +1403,11 @@ ul.suggestions li > span > svg:first-child {
 .resource.etext-outline  .etextrefs:not(#a)  {
    height:100%;
 }
-
+/*
 .resource ~ .ETSBresults > div:not(#a) {
    white-space: pre;
 }
-
+*/
 .resource ~ .ETSBresults > div:not(#a),
 .resource ~ .monlamResults > div:not(#a) {
    position: sticky;
@@ -1477,10 +1477,10 @@ ul.suggestions li > span > svg:first-child {
    width:40px;
    height:40px;
    box-shadow: 0 2px 4px rgba(187, 187, 187, 0.5);
-   top:155px;
+   top:140px;
    left:15px;
    margin-bottom:-60px;
-   z-index:1;
+   z-index:10;
    margin-top:20px;
 }
 
@@ -5718,6 +5718,7 @@ html[lang="en"] .resource .data > [data-prop="bdo:creator"] h4[data-prop="bdo:ro
 
 .etext-header > div > span {
    position:relative;
+   width:100%;
 }
 
 .etext-header.sticky .urilink {
