--- a/src/lib/searchkit/App.css
+++ b/src/lib/searchkit/App.css
@@ -704,6 +704,15 @@ header[data-hits="0"] ~ .hits .pagination,
   font-weight: 500;
 }
 
+.etext-nav-parent .etext-header.sticky > div  h2 .placeType {
+  display: block;
+  max-width: 100%;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  position: relative;
+}
+
 .resource .title + .data + .data.top-props {
   padding-bottom:20px;
 }
@@ -886,3 +895,56 @@ header[data-hits="0"] ~ .hits .pagination,
 
 
 .etext-nav-parent .etext-search .etext-search-loader { transform:scale(0.5); /*transform-origin: 20px 20px;*/ right:25px; left:auto !important;}
+
+
+.resource ~ .ETSBresults > div:not(#a) {
+  padding:10px;
+  box-sizing: border-box;
+}
+
+
+.resource ~ .ETSBresults > div:not(#a) .ETSBresult {
+  padding:5px 7px;
+  /* cursor:pointer; */
+}
+
+
+.resource ~ .ETSBresults > div:not(#a) .ETSBresult.on {
+  background-color:#e9e9e9;
+  cursor: auto;
+}
+.resource ~ .ETSBresults > div:not(#a) .ETSBresult:not(.on):hover {
+  background-color:#F5F5F5;
+}
+
+
+.resource ~ .ETSBresults > div:not(#a) .ETSBresult + .ETSBresult {
+  margin-top:5px;
+}
+
+.ETSBresult .ETSBheader {
+  margin-bottom:2px;
+}
+
+.ETSBresult .ETSBheader > span:first-child {
+  margin-right:5px;
+  display: inline-block;
+  font-weight:700;
+}
+
+.ETSBresult .ETSBheader > span + span {
+  font-weight:700;
+  font-size:16px;
+  opacity:0.5;
+}
+
+
+.resource ~ .ETSBresults .simplebar-content > div {
+  background-color:#f9f9f9;
+}
+
+
+.ETSBresult .ETSBheader + div .highlight {
+  color:#d73449;
+  font-weight:700;
+}
