fixes for etext search UI (#909)

--- a/src/lib/searchkit/App.css
+++ b/src/lib/searchkit/App.css
@@ -905,7 +905,8 @@ header[data-hits="0"] ~ .hits .pagination,
 
 .resource ~ .ETSBresults > div:not(#a) .ETSBresult {
   padding:5px 7px;
-  /* cursor:pointer; */
+  cursor:pointer;
+  scroll-margin:200px;
 }
 
 
