--- a/src/lib/searchkit/App.css
+++ b/src/lib/searchkit/App.css
@@ -912,7 +912,7 @@ header[data-hits="0"] ~ .hits .pagination,
 
 .resource ~ .ETSBresults > div:not(#a) .ETSBresult.on {
   background-color:#e9e9e9;
-  cursor: auto;
+  /* cursor: auto; */
 }
 .resource ~ .ETSBresults > div:not(#a) .ETSBresult:not(.on):hover {
   background-color:#F5F5F5;
@@ -949,3 +949,4 @@ header[data-hits="0"] ~ .hits .pagination,
   color:#d73449;
   font-weight:700;
 }
+
