--- a/src/components/App.css
+++ b/src/components/App.css
@@ -805,8 +805,10 @@ body > #pop-login { z-index:1000000 ;}
 }
 
 .ais-SearchBox-form input {
-   padding-left:48px;
-   padding-right:48px;
+   /* padding-left:48px;
+   padding-right:48px; */
+   line-height: 40px;
+   padding: 8px 48px;
 }
 
 .inner-search-bar:not(#a) > div > span:last-child input::placeholder {
