--- a/src/components/App.css
+++ b/src/components/App.css
@@ -943,6 +943,11 @@ ul.suggestions li > span > svg:first-child {
    opacity:0.5;
 }
 
+
+#outline .suggestions > li {
+   position: relative;
+}
+
 #outline .suggestions > li.selected,
 .inner-search-bar .suggestions > li.selected,
 .inner-search-bar .suggestions > li:hover,
